--- a/NewsPaper/templates/news_all.html
+++ b/NewsPaper/templates/news_all.html
@@ -1,30 +1,66 @@
-<!--  наследуемся от шаблона default.html, который мы создавали ещё во времена flatpages -->
-{% extends 'flatpages/default.html' %} 
- 
-<!-- Название у нас будет proudcts -->
+{% extends 'flatpages/default.html' %}
+
+{% load custom_filters %}
+
 {% block title %}
 Products
 {% endblock title %}
  
-<!-- В контенте на странице мы выводим все товары -->
 {% block content %}
-<h1>Все товары s</h1>
-{{ news_all }}
-{% endblock content %}
-
-<!--  наследуемся от шаблона default.html, который мы создавали ещё во времена flatpages -->
-{% extends 'flatpages/default.html' %}
- 
-<!-- Название у нас будет proudcts -->
-{% block title %}
-News
-{% endblock title %}
- 
-{% block content %}
-    <h1>All Publications</h1>
-    {% if news %} <!-- Выводим товары только если они есть с помощью тега if -->
-        {{ news_all }}
-    {% else %} <!-- Если товаров нет, то говорим что товаров нет ;) -->
-        <h2>Not found!</h2>
+    <h1>Все новости</h1>
+    <h3>{{ news_all | length }}</h3>
+    <h5>{{ time_now|date:'d M Y' }}</h5> <!-- Здесь мы применяем фильтр date. Он очень похож на метод strftime у даты. С его помощью мы можем выводить дату в нужном нам формате -->
+    <h6> {{ value1 | default_if_none:"ничего" }} </h6> 
+    <!-- Здесь, если в переменной value1 будет записано None, то выведется текст НИЧЕГО -->
+    <!-- default_if_none не улавливает такие вещи, как пустые строки, пустые списки и т. д. Его задача отследить конкретно переменную None. Для того чтобы отлавливать пустые строки, списки и т. д. используется фильтр default, который имеет точно такой же синтаксис. -->
+    <hr>
+    {% if news_all %} <!-- Если есть товары, то выводим таблицу с ними -->
+        <table>
+            <tr>
+                <td>
+                    Название статьи
+                </td>
+                <td>
+                    Дата публикации
+                </td>
+                <td>
+                    Содержимое
+                </td>
+                <!-- <td>
+                    Автор
+                </td>
+                <td>
+                    Категория
+                </td>
+                <td>
+                    Рейтинг
+                </td> -->
+            </tr>
+            {% for news in news_all %}
+                <tr>
+                    <td>
+                        | {{ news.title | multiply:1 }} <!-- применим наш фильтр, чтобы название товара вывелось 1 раза -->
+                    </td>
+                    <td>
+                        | {{ news.created_at | date:'d M Y h:m'  }}
+                    </td>
+                    <td>
+                        | {{ news.content |truncatechars:50 | Censor:'*censored*'}}  <!--дописываем специальный фильтр, чтобы ограничить количество символов до 20. Все остальные символы превратятся в многоточие. -->
+                       <!--| {{ news.content |truncatewords:5 }}  дописываем специальный фильтр, чтобы ограничить количество слов до 5. Все остальные слова превратятся в многоточие. -->
+                    </td>
+                    <!-- <td>
+                        | {{ news.author }}
+                    </td>
+                    <td>
+                        | {{ news.category }}
+                    </td>
+                    <td>
+                        | {{ news.postRate }}|
+                    </td> -->
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <h2>Товаров нет!</h2>
     {% endif %}
 {% endblock content %}
