--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -3,7 +3,7 @@
 {% load custom_filters %}
 <!-- Название у нас будет proudcts -->
 {% block title %}
-News
+Newsы
 {% endblock title %}
  
 <!-- В контенте на странице мы выводим сам товар, айди которого было передано в адрес -->
