--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -35,6 +35,8 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../search/">Search</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../add_news/">Add News</a></li>
                     </ul>
                 </div>
             </div>
@@ -45,7 +47,7 @@
                 <div class="masthead-subheading">Welcome To Our Studio!</div>
                 {% block content %}
                 {% endblock content %}
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+                <div class="masthead-heading text-uppercase"><a href="../news/search/">It's Nice To Meet You</a></div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
             </div>
         </header>
