--- a/NewsPaper/templates/news_all.html
+++ b/NewsPaper/templates/news_all.html
@@ -39,6 +39,11 @@ News Page
             {% for news in news_all %}
                 <tr>
                     <td>
+                    <a href="{% url 'post' news.id %}">{{ news.title | title }}</a> <!-- При нажатии на имя товара в таблцие нас теперь будет перекидывать на страницу с самого товара -->
+                    <a href="{% url 'post_update' news.id %}"><u>Редактировать</u></a> <!-- добавим ссылку на редактирование товара-->
+         
+                    <a href="{% url 'post_delete' news.id %}"><u> Удалить </u></a> <!-- добавим ссылку на удаление товара-->
+                    
                         | {{ news.title | multiply:1 }} <!-- применим наш фильтр, чтобы название товара вывелось 1 раза -->
                     </td>
                     <td>
@@ -86,6 +91,6 @@ News Page
 
         {% endif %}
     {% else %}
-        <h2>Товаров нет!</h2>
+        <h2>Новости отсутствуют!</h2>
     {% endif %}
 {% endblock content %}
