--- a/NewsPaper/templates/search.html
+++ b/NewsPaper/templates/search.html
@@ -96,3 +96,10 @@ News
 
     <!-- {% endif %} -->
 {% endblock content %}
+
+
+<!--Добавить в название ссылку на статью
+ <a href="{% url 'product_detail' product.id %}">{{ product.name|title }}</a> При нажатии на имя товара в таблице нас теперь будет перекидывать на страницу с информацией о товаре -->
+
+                        
+                    
