--- a/NewsPaper/templates/post_update.html
+++ b/NewsPaper/templates/post_update.html
@@ -1,11 +1,14 @@
-{% extends 'flatpages/default.html' %}
-    
+
+<!--  наследуемся от шаблона default.html, который мы создавали ещё во времена flatpages -->
+{% extends 'flatpages/default.html' %} 
+{% load custom_filters %}
+<!-- Название у нас будет proudcts -->
 {% block title %}
-Edit
+Newsы
 {% endblock title %}
-
+ 
+<!-- В контенте на странице мы выводим сам товар, айди которого было передано в адрес -->
 {% block content %}
-
 <h1>Редактирование новости</h1>
 
 <form method="POST">
